--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a  class="apresentacao__links__navegacao" href="https://github.com/rafaballerini">
+                <a  class="apresentacao__links__navegacao" href="https://github.com/Benalmeida18">
                 <img src="./assets/github.png">
                     Github
                 </a>
