--- a/index.html
+++ b/index.html
@@ -30,13 +30,9 @@
                 <img src="./assets/github.png">
                     Github
                 </a>
-                <a  class="apresentacao__links__navegacao" href="https://linkedin.com/in/rafaellaballerini">
+                <a  class="apresentacao__links__navegacao" href="www.linkedin.com/in/benjamin-almeida-217a671b4/">
                     <img src="./assets/linkedin.png">
                     LinkedIn
-                </a>
-                <a  class="apresentacao__links__navegacao" href="https://twitch.tv/guilimadev">
-                    <img src="./assets/twitch.png">
-                    Twitch
                 </a>
             </div>
         </section>
