--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                 <img src="./assets/github.png">
                     Github
                 </a>
-                <a  class="apresentacao__links__navegacao" href="www.linkedin.com/in/benjamin-almeida-217a671b4/">
+               <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/benjamin-almeida-217a671b4/">
                     <img src="./assets/linkedin.png">
-                    LinkedIn
+                    linkedin
                 </a>
             </div>
         </section>
