--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <strong class="titulo-destaque"> com um Front-end de qualidade!
             </strong></h1>
             <p class="apresentacao__conteudo__texto">
-                Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, 
+                Olá! Sou Benjamin almeida, desenvolvedor Front-end com especialidade em React, 
                 HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias.
                 Vamos conversar?
             </p>
@@ -38,7 +38,7 @@
         </section>
         <img class="apresentacao__imagem" src="./assets/Imagem.png" alt="Foto da Joana Santos programando">
     </main>
-    <footer class="rodape"> <p>Desenvolvido por DevBenja</p>
+    <footer class="rodape"> <p>Desenvolvido por DevBenja.</p>
     </footer>
 </body>
 </html>
